fill pattern moved to v-shape, them CustomGraphics

--- a/src/v-scene/style.less
+++ b/src/v-scene/style.less
@@ -1,6 +1,8 @@
 .v-scene {
     user-select: none;
-    canvas {
-        border: 1px solid black;
-    }
+    position: fixed;
+    bottom: 0;
+}
+.v-scene + canvas {
+    border: 1px solid black;
 }
